welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:5: error: not found: value biscuit
    	biscuit=biscuit+1
        ^Poucet:8: error: not found: value biscuit
if (biscuit <= 2) {
    ^